[gd_scene load_steps=5 format=3 uid="uid://c7lgfwy3a3yly"]

[ext_resource type="Script" uid="uid://ctywxj6p4q3rq" path="res://scripts/ui/tutorial_dialogue_box.gd" id="1_script"]
[ext_resource type="Texture2D" uid="uid://7c8l1bvff785" path="res://assets/sprites/Maki_Normal.png" id="2_maki"]
[ext_resource type="FontFile" uid="uid://bg6pof5832ljm" path="res://assets/fonts/pixel.ttf" id="3_font"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.1, 0.1, 0.12, 0.95)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.3, 0.35, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="TutorialDialogueBox" type="CanvasLayer"]
layer = 100
script = ExtResource("1_script")

[node name="DialoguePanel" type="Panel" parent="."]
anchors_preset = -1
anchor_top = 0.65
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 20.0
offset_right = -40.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="HBoxContainer" type="HBoxContainer" parent="DialoguePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 24

[node name="CharacterPortrait" type="TextureRect" parent="DialoguePanel/HBoxContainer"]
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("2_maki")
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="DialoguePanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="SpeakerName" type="Label" parent="DialoguePanel/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.4, 1)
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 28
text = "MAKI"

[node name="DialogueText" type="RichTextLabel" parent="DialoguePanel/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0.95, 0.95, 1, 1)
theme_override_fonts/normal_font = ExtResource("3_font")
theme_override_font_sizes/normal_font_size = 22
bbcode_enabled = true
text = "Welcome to GoCars! I'm Maki, and I'll teach you how to code cars!"

[node name="ActionHelper" type="Label" parent="DialoguePanel/HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 0.8, 1, 1)
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 18

[node name="ContinueIndicator" type="Label" parent="DialoguePanel/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_color = Color(0.6, 0.6, 0.65, 1)
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 18
text = "Click to continue..."

[node name="SkipButton" type="Button" parent="DialoguePanel"]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -140.0
offset_top = 12.0
offset_right = -12.0
offset_bottom = 40.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0.7, 0.7, 0.75, 1)
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 16
text = "Skip Tutorial"
flat = true
